magnolia-module-samples/src/main/resources/mgnl-files/docroot/samples/css/main.css
@import url(table.css);

@import url(menu.css);

@import url(editor.css);

body {
    background-color: #fff;
}

div,h1,h2,td,ul,li {
    font-family: Verdana, sans-serif;
    color: #000;
    font-size: 11px;
    vertical-align: top;
    line-height: 17px;
}

h1 {
    font-size: 13px;
    font-weight: bolder;
    color: #993333;
}

h2 {
    font-size: 16px;
    color: #666666;
    margin-top: 10px;
    font-weight: normal;
}

h3 {
    font-size: 13px;
    color: #666666;
    margin-top: 5px;
    font-weight: normal;
}

h4 {
    font-size: 11px;
    color: black;
    margin-top: 3px;
    font-weight: bold;
}

a {
    color: #000;
}

hr {
    background-color: transparent;
    font-size: 1px;
    line-height: 1px;
    height: 1px;
    border: none;
    border-top: 1px solid #999;
    width: 100%;
}

.contentImage_left {
    float: left;
    padding-right: 20px;
    padding-bottom: 10px;
}

.contentImage_right {
    float: right;
    padding-left: 5px;
    padding-bottom: 10px;
}

#contentDivMainColumnTotalWidth {
    position: absolute;
    left: 217px;
    top: 88px;
    width: 710px;
}

#contentDivMainColumn {
    position: absolute;
    left: 217px;
    top: 88px;
    width: 450px;
}

#contentDivRightColumn {
    position: absolute;
    left: 702px;
    top: 75px;
    width: 225px;
}

.rightColumnTitle {
    background-color: #999;
    color: #fff;
    font-weight: bold;
    padding-top: 2px;
    padding-bottom: 3px;
    padding-left: 2px;
    margin-bottom: 4px;
    margin-top: 25px;
}

.devShowBox {
    background-color: #cccccc;
    padding: 4px;
}

.code {
    font-family: Courier New, monospace;
    font-size: 12px;
}

.searchresult {
    padding-bottom: 10px;
    border-bottom: 1px solid #ccc;
}

.searchresult p {
    margin: 3px 0 3px 0;
}

.searchresult h4,.searchresult a {
    display: block;
    margin-bottom: 2px;
}

.spacer1 {
    height: 10px;
}

.spacer2 {
    height: 20px;
}

#footer {
    margin-top: 10px;
    border-top: 1px solid #999;
    padding-top: 3px;
}

#footer img {
    float: right;
    border: none;
    margin-top: 5px;
}

